--- a/estilos/FRDstyle.scss
+++ b/estilos/FRDstyle.scss
@@ -22,21 +22,6 @@ $presentation-h4-font-size: 1.1em;
 $presentation-font-size-root: 40px;
 $presentation-line-height: 1.5em;
 
-// font colour
-$presentation-heading-color: #000000 !default;
-
-// code
-$code-color: #b20e10 !default;
-$code-block-font-size: 0.6em;
-$code-block-border-color: #000000;
-$code-block-bg: #fafafa;
-
-// bg colours 
-$body-color: #000000;
-$link-color: #b20e10;
-$body-bg: #ffffff;
-
-
 //
 // Color system
 //
@@ -72,19 +57,20 @@ $dark:          $gray-800 !default;
 
 $min-contrast-ratio:   2.75 !default;
 
-// Body
-$body-color:    $black !default;
+// font colour
+$presentation-heading-color: $red !default;
 
-// Dropdowns
+// code
+$code-color: #b20e10 !default;
+$code-block-font-size: 0.6em;
+$code-block-border-color: #000000;
+$code-block-bg: #fafafa;
 
-$dropdown-link-color:           $body-color !default;
-$dropdown-link-hover-color:     $white !default;
-$dropdown-link-hover-bg:        $primary !default;
+// body bg colours 
+$body-color: $black !default;
+$link-color: #b20e10;
+$body-bg: #ffffff;
 
-// Navbar
-
-$navbar-dark-color:             rgba($white, .8) !default;
-$navbar-dark-hover-color:       $white !default;
 
 // Callouts
 $callout-color-note: $cyan;
@@ -96,17 +82,20 @@ $callout-color-tip: $green;
 /*-- scss:rules --*/
 
 // Variables
+
+.reveal-full-page{
+  padding: 0%;
+}
+
+body{
+  padding: 0;
+}
+
 $text-shadow: 0 1px 0 rgba(0, 0, 0, .05) !default;
 
 // Mixins
 @mixin btn-shadow($color){
   @include gradient-y-three-colors(tint-color($color, 16%), $color, 60%, shade-color($color, 6%));
-}
-
-// Navbar
-.navbar-brand,
-.nav-link {
-  text-shadow: $text-shadow;
 }
 
 // Buttons
@@ -142,24 +131,15 @@ $text-shadow: 0 1px 0 rgba(0, 0, 0, .05) !default;
 }
 
 h2 {
-  font-size: calc(1.6em / 0.1);
+  font-size: $presentation-h2-font-size;
   margin-top: 20px;
 }
 
 .fonte-gifs {
-  font-size: 12pt;
-}
-
-// Navs
-
-.dropdown-menu {
-  .dropdown-header {
-    color: $gray-600;
-  }
+  font-size: 0.5em;
 }
 
 // Indicators
-
 .badge {
   &.bg-secondary,
   &.bg-light {
@@ -178,38 +158,44 @@ h2 {
 
 
 // footer 
-.reveal .footer a {
+.reveal .footer p {
   color: $cyan;
-  font-size: 8px;
-}
-
-.reveal .footer {
-  color: $cyan;
+  font-size: .8em;
 }
 
 // body  
 
-body {
-  padding-right: 10px;
-}
-
-
 // title 
-#title-slide .author {
-  font-size: 80px!important;
+.reveal .title-slide {
+  text-align: center;
 }
 
-.quarto-title-block  {
-  top: 10px !important; 
+.reveal .slide .level2 {
+  padding: 10px;
 }
 
-// #title-slide .author:after {
-//   content: url('/mtp/imagens/mapeprof.png');
-//   display: block;
-// }
+.reveal .quarto-title-block {
+  top: 5px !important; 
+}
+
+.reveal .quarto-title-block .quarto-title-authors {
+  margin-top: 3em;
+}
+
+.reveal .quarto-title-block .quarto-title-authors .quarto-title-author {
+  padding-left: 3.5em;
+  padding-right: 3.5em;
+}
+
+
+
+.reveal .quarto-title-block .quarto-title-authors .quarto-title-author .quarto-title-affiliation {
+  font-size: .5em;
+  margin-top: 0px;
+  margin-bottom: 8px;
+}
 
 // aside
-
-.reveal .slide aside, .reveal .slide div.aside {
+.slide aside, .reveal .slide div.aside {
   color: #9d9d9d
 }
